results/SVCOMP/2-shot/log-assert2-2024_03_18_23_03_29.txt
import java.util.Random;

class assert2 {
    //@ ensures \max(\result) == 1000;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \max(\result) == 1000;
                      ^
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \max function expects an argument of type JMLSetType<E> rather than <any>
    //@ ensures \max(\result) == 1000;
                     ^
  where E is a type-variable:
    E extends Object declared in interface JMLSetType
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: bad operand types for binary operator '=='
    //@ ensures \max(\result) == 1000;
                              ^
  first type:  Object
  second type: int
3 errors

